--- a/rapport2.tex
+++ b/rapport2.tex
@@ -12,7 +12,7 @@
 \usepackage[french]{varioref}
 \usepackage{algorithm}
 \usepackage{algorithmic}
-%\usepackage[ruled,vlined]{algorithm2e}
+\usepackage{qtree}
 
 \newcommand\rmq[2][green!50!black]{\marginpar{\hspace*{-0.5em}\begin{minipage}{0.25\textwidth}\scriptsize\if\empty#1\empty\else\color{#1}\fi
       #2
