--- a/stage.tex
+++ b/stage.tex
@@ -1,10 +1,6 @@
 \section{Stage}
 
 \subsection{But}
-%expliquer le sujet / les idées de départ :
-%      	trier la kbwt (améliorer la compression)
-%		garder les propriétés de la bwt
-%		améliorer l'indexation (éviter les calculs redondants)
 Le but de ce travail est de proposer un algorithme efficace de compression et d'indexation des reads peu gourmand en mémoire. Pour cela, la piste privilégiée est l'étude de la transformée de Burrows-Wheeler à contexte borné. 
 
 Les reads étant une donnée très redondante, la recherche d'un motif dans le texte devrait occasionner de nombreux calculs identiques. L'un des objectifs est donc d'optimiser la recherche en factorisant ces calculs. 
@@ -12,20 +8,13 @@ Les reads étant une donnée très redondante, la recherche d'un motif dans le t
 De plus, du fait de la redondance des données, les $k$-contextes devraient être grands et nombreux. Nous allons donc essayer d'accroître la probabilité d'obtenir de longues suites de caractères identiques.
 
 
-
-
 \subsection{Approche}
-%	implémentation de la bwt, kbwt, kbwt triée
-%	étude sur l'entropie des différentes structures
-%	essai de compression avec différents compresseurs existants
-%	stocker LF plutot que les structures de Petri
-%	optimiser le stockage de LF
-%	enlever les k-contextes chevauchant 2 reads
+%Pour augmenter les suites de caractères identiques, l'idée est de trier la \kbwt\ sur ses $k$-contextes. Il faut donc aussi fournir les structures et algorithmes nécessaires au maintien des propriétés de la \bwt\ sur la \kbwt\ triée.
+%La redondance des calculs dans la recherche des positions de motif est elle évitée grâce à un nouvel algorithme qui parcourt la fonction LF() \textit{par blocs}.
+%Enfin, une autre amélioration sur la taille de l'espace utilisé pour la \kbwt\ est effectuée grâce au stockage de la fonction LF().
+
 \subsubsection{Tri dans les k-contextes}
 L'idée est de trier la \kbwt\ sur ses $k$-contextes, comme dans la figure \ref{tri}, pour accroître le nombre et la taille des suites de caractères identiques.
-
-% Il faudra donc fournir les structures et algorithmes nécessaires au maintien des propriétés de la \bwt\ sur la \kbwt\ triée.
-
 
 \begin{figure}[h!]
 \fbox{%
@@ -59,7 +48,6 @@ L'idée est de trier la \kbwt\ sur ses $k$-contextes, comme dans la figure \ref{
 \end{figure}
 
 
-
 Pour que le tri de la \kbwt\ ait un sens, il faut s'assurer qu'il est possible de l'inverser, et retrouver des motifs efficacement (il faut donc pouvoir retrouver LF()).
 
 Il n'est pas possible d'inverser la \kbwt\ triée telle quelle, puisqu'il est impossible de savoir dans quel ordre étaient les $k$-contextes avant qu'il ne soient triés. Par exemple, \textsc{"ana\textbf{na}anaaanaa\$"} et \textsc{"ana\textbf{an}anaaanaa\$"} ont la même \kbwt\ triée.
@@ -71,8 +59,6 @@ Une idée simple est de conserver les permutations pendant le tri des $k$-contex
 L'idée est donc de stocker la \kbwt\ dans un wavelet tree, et de garder un vecteur de bit pour mémoriser les changements. Ce vecteur de bit correspond à un \textit{ou exclusif} ($xor$) entre le wavelet tree de la \kbwt\ et celui de la \kbwt\ triée.
 
 Le vecteur de bit obtenu ne devrait contenir que très peu de 1. Les \textit{sarray} de Okanohara et Sakadane\up{\cite{sarray}} sont optimisés pour les vecteurs de bits éparses. L'information de la différence des permutations ne devrait donc pas prendre beaucoup de place.
-
-%Ainsi, le vecteur mappe bit à bit la le wavelett tree de la \kbwt, et est placé à 1 si le bit du wavelett tree change entre la \kbwt\ et la \kbwt\ triée. Ainsi, le passage de la \kbwt\ à celle triée, et inversement, se fait grâce à un \textit{ou exclusif} ($xor$) avec le vecteur de bit.
 
 
 \subsubsection{Recherche de positions de motifs courts}
@@ -130,7 +116,7 @@ Sur la figure \ref{redondance} par exemple, on a $i+5 - i = 5$, tandis que $j+6 
 			\item le tableau de suffixe $SA$ échantillonné en un taux $p$, 
 		\end{itemize}
 %		\CALL{recherchePositions}{$s$, $e$, $SA$, $p$, 0, []}
-	\STATE FONCTION recherchePositions($s$, $e$, $SA$, $p$, $cpt$, $lpos$) \\
+	\STATE FONCTION recherchePositions($s$, $e$, $SA$, $p$, $cpt$, $lpos$): \\
 	\FORALL{$i \geq s,\ i \leq e,\ i\pmod p = 0$}
 		\STATE $lpos \gets lpos + SA[i/p] + cpt$
 	\ENDFOR
@@ -191,7 +177,7 @@ La deuxième approche consiste à regarder la différence entre la fonction LF()
 
 Pour les résultats de cette section, nous nous sommes appuyés sur un jeu de 500 reads de taille 70, sans erreur.
 
-Nous avons étudié la compression de la \kbwt\ triée par rapport à la \kbwt\ présentée dans la thèse de Petri\up{\cite{petri}}. Comme attendu, on peut voir dans la figure \ref{tailleContextes} que les $k$-contextes de la \kbwt\ pour des reads sont grands et nombreux. La compression est donc bien meilleure (table \ref{résultats}).
+Nous avons étudié la compression de la \kbwt\ triée par rapport à la \kbwt\ présentée dans la thèse de Petri\up{\cite{petri}}. Comme attendu, on peut voir dans la figure \ref{tailleContextes} que les $k$-contextes de la \kbwt\ pour des reads sont grands et nombreux. La compression est donc bien meilleure (table \ref{struct}).
 
 \begin{figure}[!ht]
     \center
@@ -202,9 +188,17 @@ Nous avons étudié la compression de la \kbwt\ triée par rapport à la \kbwt\ 
 
 De plus nous avons étudier l'espace pris par la fonction LF() suivant les deux approches décrites dans la section précédente (table \ref{résultats}). 
 
-\begin{tabular}{|c|}
+\begin{figure}
+\begin{tabular}{|c||c|c|}
 	\hline
-	les résultats arrivent\\
-	\hline
-\label{résultats}
+	 & reads10K & reads100\\ \hline \hline
+	fichier original & & \\ \hline
+	\bwt & 48,3~ko & 941~octets\\ \hline
+	\kbwt & & \\ \hline
+	\kbwt\ triée & 51,4~ko & 935~octets \\ \hline
+	\kbwt\ + $Dk$ & & \\ \hline
+	\kbwt\ triée + $Dk$ + $Corr$ & & \\ \hline
 \end{tabular}
+\caption{Comparaison de la taille des différentes structures étudiées durant ce stage. La compression a été effectuée avec le compresseur \textit{bzip2}. $Dk$ est le vecteur de bits contenant la délimitation des $k$-contextes, $Corr$ est le vecteur de bit introduit dans la section 2.2.1, correspondant au \textit{xor} entre le wavelet tree de la \kbwt\ et celui de la \kbwt\ triée.}
+\label{struct}
+\end{figure}
